--- a/prove/nbproject/project.properties
+++ b/prove/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/prove.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.json-simple-2.2.0.jar=src/json-simple-2.2.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.json-simple-2.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
