added comments and javadocs, fixed some bugs, added progressbar, image control fixed

--- a/prove/nbproject/project.properties
+++ b/prove/nbproject/project.properties
@@ -35,7 +35,7 @@ endorsed.classpath=
 excludes=
 file.reference.json-simple-2.2.0.jar=src/json-simple-2.2.0.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.json-simple-2.2.0.jar}
 # Space-separated list of extra javac options
